syntax = "proto3";

package build.stack.auth.v1beta1;

import "google/protobuf/timestamp.proto";

service AuthService {
  rpc DeviceLogin(DeviceLoginRequest) returns (stream DeviceLoginResponse) {}
}

message User {
  string handle = 1;
  string domain = 2;
  string login = 3;
  string name = 4;
  string avatar_url = 5;
  string splash_url = 6;
  string email = 7;
  bool is_org = 8;

  reserved 9, 10; // was deprecated "customer_id" field

  // if the email of the user has been not been confirmed yet.
  bool is_unconfirmed = 11;
}


message DeviceLoginRequest {
}

message DeviceLoginResponse {
  // the URL where the user can perform oauth in the browser.
  // this will be populated after the first stream response.
  string oauth_url = 1;

  // a boolean that signals when the device has logged in.
  // in the case the user and token should be populated.
  bool completed = 2;

  // the user details
  User user = 3;

  // a jwt token that can be used for subsequent auth
  string token = 4;

  // date at which the token is expected to expire
  google.protobuf.Timestamp expires_at = 5;
}